# fullcust

./: .eslintrc.js  Cargo.toml  array2d.ts  async-solver.ts  index.ts  index.tsx  package.json  solver.ts  tsconfig.json  webpack.config.js  worker.ts
.github/workflows/: deploy.yml
backend/: array2d.ts  index.ts  internal.ts
js/: bn4.json  bn5.json  bn6.json  index.ts  index.tsx  solver.ts  worker.ts
js/backends/js/: array2d.ts  index.ts  internal.ts
js/backends/wasm/: index.ts
src/: lib.rs  solver.rs
src/solver/: candidates.rs  placement.rs  polyhedral.rs
static/: index.html
