[package]
name = "customsword"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.45"
web-sys = { version = "0.3.22", features = ["console"] }
log = "0.4"
wasm-log = "0.3"
anyhow = "1"
ndarray = "0.15"
genawaiter = "0.99"
thiserror = "1"

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
assert_matches = "1"
